--- a/sample-app-for-sdk/package.json
+++ b/sample-app-for-sdk/package.json
@@ -12,12 +12,14 @@
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.1.3",
     "currency.js": "^1.2.2",
+    "firebase": "^9.8.2",
     "react": "^18.1.0",
     "react-bootstrap": "^2.4.0",
     "react-dom": "^18.1.0",
     "react-hook-form": "^7.31.3",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "uuid": "^8.3.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
