--- a/sample-app-for-sdk/package.json
+++ b/sample-app-for-sdk/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
+    "@firebase/util": "^1.6.0",
     "@mui/material": "^5.8.2",
     "@rschpdr/react-money-input": "^0.1.3",
     "@testing-library/jest-dom": "^5.16.4",
@@ -13,6 +14,7 @@
     "bootstrap": "^5.1.3",
     "currency.js": "^1.2.2",
     "firebase": "^9.8.2",
+    "prop-types": "^15.8.1",
     "react": "^18.1.0",
     "react-bootstrap": "^2.4.0",
     "react-dom": "^18.1.0",
