visitor collection on Firabase complete

--- a/sample-app-for-sdk/package.json
+++ b/sample-app-for-sdk/package.json
@@ -19,8 +19,11 @@
     "react-bootstrap": "^2.4.0",
     "react-dom": "^18.1.0",
     "react-hook-form": "^7.31.3",
+    "react-router": "^6.3.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "react-ua": "^3.0.0",
+    "ua-parser-js": "^1.0.2",
     "uuid": "^8.3.2",
     "web-vitals": "^2.1.4"
   },
