--- a/sample-app-for-sdk/.eslintrc.json
+++ b/sample-app-for-sdk/.eslintrc.json
@@ -8,7 +8,9 @@
     "no-unused-expressions": "off",
     "arrow-parens":"off",
     "arrow-body-style": "off",
-    "no-unused-vars":"off"
+    "no-unused-vars":"off",
+    "linebreak-style": "off",
+    "no-alert": "off"
   }
 }
 
