--- a/sample-app-for-sdk/package.json
+++ b/sample-app-for-sdk/package.json
@@ -3,10 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@emotion/react": "^11.9.0",
-    "@emotion/styled": "^11.8.1",
+    "@emotion/react": "^11.9.3",
+    "@emotion/styled": "^11.9.3",
     "@firebase/util": "^1.6.0",
-    "@mui/material": "^5.8.2",
+    "@mui/icons-material": "^5.8.4",
+    "@mui/material": "^5.8.4",
     "@rschpdr/react-money-input": "^0.1.3",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
@@ -46,7 +47,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
   }
 }
